@@ -990,7 +990,8 @@ I32 lim;
 #define main_cv PL_main_cv
 #define main_root PL_main_root
 #define main_start PL_main_start
-#endif 
+#endif
+
 	    CV *outside = CvOUTSIDE(sv);
 	    m_printf(level, PerlIO_stderr(), "  OUTSIDE = 0x%lx (%s)\n", 
 		     (long)outside, 
